Crear torneos: añadida funcionalidad que permite comparar fechas inicio y fin entre ellas y con la fecha actual (sólo día, mes y año, no horas). Mensaje de error al respecto

--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -20,7 +20,7 @@
 								<span class="date">hasta {{date_finish}}</span> 
 								(creado por {{user_create}})
 							</div>
-							<img src={{pic}} {{banner}} class="post-image" alt="sample image" width="606" height="115" />
+							<img src={{pic}} class="post-image" alt="sample image" width="606" height="115" />
 							<div class="post-description">
 								<p>{{description}}</p>
 								<input type="button" class="participantes" value="Participantes">
