Cuando un usuario se apunta a un torneo mantener el botón pulsado (cambiando el estilo) según una variable de sesión; si vuelve a pulsar no afectará al estilo y no se añadirá otra vez a la lista de usuarios apuntados; puede apuntarse a todos los torneos si quiere

--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -25,7 +25,7 @@
 								<p>{{description}}</p>
 								<input type="button" class="participantes" value="Participantes">
 								{{#if currentUser}}
-									<input type="button" class="sign" value="Me apunto!">
+									<input type="button" id="{{_id}}" class = "apunto" value="Me apunto!">
 								{{else}}
 									<i>Sign for add to this championship.</i>
 								{{/if}}	
