Reordenación del código js y templates de torneos para mostrar los participantes de cada torneo (añadiendo otro campo participantes) y así mostrarlo en la plantilla correspondiente; Aún no funciona del todo bien

--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -23,20 +23,14 @@
 							<img src={{pic}} class="post-image" alt="sample image" width="606" height="115" />
 							<div class="post-description">
 								<p>{{description}}</p>
-								<input type="button" class="participantes" value="Participantes">
+								<input type="button" class="participantes" id = "{{_id}}" value="Participantes">
 								{{#if currentUser}}
 									<input type="button" id="{{_id}}" class = "apunto" value="Me apunto!">
+									<p>{{participantes}}</p> 
 								{{else}}
-									<i>Sign for add to this championship.</i>
-								{{/if}}	
-								{{#if participantes}}
-									{{#each champ}}
-										<p>{{usuarios}}</p>
-										<p>{{game}}</p>
-									{{/each}}
-								{{else}}
-								<p></p>
-								{{/if}}
+									<i>Sign for add to this championship.</i>  
+								{{/if}} 
+								<p></p> 
 							</div>
 						</div>
 					{{/each}}
