Sección torneos: funcionalidad de añadir a lista de participantes según el estado del botón me apunto; si no está pulsado (color botón) el user actual no está en la bd del torneo; si está pulsado (color rojo) se encuentra en la bd

--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -23,7 +23,7 @@
 							<img src={{pic}} class="post-image" alt="sample image" width="606" height="115" />
 							<div class="post-description">
 								<p>{{description}}</p>
-								<input type="button" class="participantes" id = "{{_id}}" value="Participantes">
+								<input type="button" class="{{_id}}" id = "participantes" value="Participantes">
 								{{#if currentUser}}
 									<input type="button" id="{{_id}}" class = "apunto" value="Me apunto!">
 									<p>{{participantes}}</p> 
