Ya se muestran los nombres de todos los participantes de cada torneo en un div debajo del torneo (falta la funcionalidad del botón para mostrarlos o no

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -804,3 +804,15 @@ td, th {
 .selected_apunto {
 	background-color: red;
 } 
+
+#part_list {
+	margin: 1%;
+	color: red;
+	font-weight: bold;
+	text-align: center;
+}
+
+#container_part {
+	margin: 1%;
+	border: 2px solid black;
+}
