--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -27,7 +27,11 @@
 								<input type="button" class="{{_id}}" id = "participantes" value="{{participantes _id}}">
 								{{#if currentUser}}
 									<input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}}">
-									<p>{{participantes}}</p> 
+									<div id = "container_part">
+										{{#each lista_participantes _id}}
+											<div id = "part_list">{{getUsername id_user}}</div>
+										{{/each}}
+									</div>
 								{{else}}
 									<i>Sign for add to this championship.</i>  
 								{{/if}} 
