--- a/client/templates/ranking-t.html
+++ b/client/templates/ranking-t.html
@@ -17,7 +17,9 @@
 					<tr>
 						<th>GAME</th>
 						<th>USER</th>
-						<th>SCORE</th> 
+						<th>MAX SCORE</th> 
+						<th>Total SCORE</th> 
+						<th>RANGO</th> 
 					</tr>
 				</thead> 
 			</table>  
@@ -27,7 +29,9 @@
 					<tr>
 						<td>{{game}}</td>
 						<td>{{user}}</td>
-						<td>{{score}}</td> 
+						<td>{{maxScore}}</td> 
+						<td>{{totalScore}}</td> 
+						<td>{{rango}}</td> 
 					</tr>
 				</tbody>
 			</table>  
