--- a/client/templates/ranking-t.html
+++ b/client/templates/ranking-t.html
@@ -12,31 +12,53 @@
 		</div> 
 		
 		<div id = "ranking_container">
-			<table> 
-				<thead>
-					<tr>
-						<th>GAME</th>
-						<th>USER</th>
-						<th>MAX SCORE</th> 
-						<th>Total SCORE</th> 
-						<th>RANGO</th> 
-					</tr>
-				</thead> 
-			</table>  
-			{{#each scores}} 
-			<table>
-				<tbody>
-					<tr>
-						<td>{{game}}</td>
-						<td>{{user}}</td>
-						<td>{{maxScore}}</td> 
-						<td>{{totalScore}}</td> 
-						<td>{{rango}}</td> 
-					</tr>
-				</tbody>
-			</table>  
-		</div>
+
+
+
+	<div class="btn-toolbar">
+	    <button class="btn btn-primary">Boton Funcional 1</button>
+	    <button class="btn">Boton Funcional 3</button>
+	    <button class="btn">Boton Funcional 2</button>
+	</div>
+
+<div class="well">
+    <table class="table">
+      <thead>
+        <tr>
+          		<th>#</th>
+				<th>GAME</th>
+				<th>USER</th>
+				<th>MAX SCORE</th> 
+				<th>Total SCORE</th> 
+				<th>RANGO</th> 
+        </tr>
+      </thead>
+      <tbody>
+      {{#each scores}} 
+        <tr>
+        	<td>{{No}}</td>
+			<td>{{game}}</td>
+			<td>{{user}}</td>
+			<td>{{maxScore}}</td> 
+			<td>{{totalScore}}</td> 
+			<td>{{rango}}</td> 
+		</tr>
 		{{/each}}
+      </tbody>
+    </table>
+</div>
+<div class="pagination">
+    <ul>
+        <li><a href="#">Prev</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">Next</a></li>
+    </ul>
+</div>
+</div>
 		
-	{{/if}}
+		
+{{/if}}
 </template> 
