--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -24,7 +24,7 @@
 							<img src={{pic}} class="post-image" alt="sample image" width="606" height="115" />
 							<div class="post-description">
 								<p>{{description}}</p>
-								<input type="button" class="{{_id}}" id = "participantes" value="{{participantes _id}}">
+								<input type="button" id="{{_id}}" class = "participantes" value="{{participantes _id}}">
 								{{#if currentUser}}
 									<input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}}">
 									<div id = "{{_id}}" class = "{{muestra_part _id}}">
