--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,28 +1,32 @@
 <template name="profil">
 	{{#if showprofile}}
-		<div id="formu">
-			<h1>Perfil de Usuario</h1>
-			<div class="container">            
-				Nombre: <input class="form-control" name="firstname" value="{{getUsername getUserId}}" type="text"/>
-           		Email: <input class="form-control" name="youremail" value="{{getUserEmail getUserId}}" type="email" />
-            	<!--<input class="form-control" name="password" placeholder="New Password" type="password" />-->
-            	<!--Fecha de nacimiento: <input type="text" id="date_start" value="{{datebirthday}}">-->
-				<label class="radio-inline"> Género: 
-					<input type="radio" name="sex" id="inlineCheckbox1" value="male" /> Male
-					<input type="radio" name="sex" id="inlineCheckbox2" value="female" /> Female
-				</label>
-				<br/>
-				<br/>
-				<button class="btn btn-primary" type="submit"> Guardar los cambios</button>
+		{{#if registrado}}
+			<div id="formu">
+				<h1>Perfil de Usuario</h1>
+				<div class="container">            
+					Nombre: <input class="form-control" name="firstname" value="{{getUsername getUserId}}" type="text"/>
+           			Email: <input class="form-control" name="youremail" value="{{getUserEmail getUserId}}" type="email" />
+            		<!--<input class="form-control" name="password" placeholder="New Password" type="password" />-->
+            		Fecha de nacimiento: <input type="text" id="datebirthday" value="{{datebirthday}}">
+					<label class="radio-inline"> Género: 
+						<input type="radio" name="sex" id="inlineCheckbox1" value="male" /> Male
+						<input type="radio" name="sex" id="inlineCheckbox2" value="female" /> Female
+					</label>
+					<br/>
+					<br/>
+					<button class="btn btn-primary" type="submit"> Guardar los cambios</button>
+				</div>
 			</div>
-		</div>
-		insignias
-		rango
-		posicion en el ranking general
-		puntos conseguidos
-		partidas jugadas
-		partidas ganadas
-		(si se pudiese mejor con un gráfico)
+			insignias
+			rango
+			posicion en el ranking general
+			puntos conseguidos
+			partidas jugadas
+			partidas ganadas
+			(si se pudiese mejor con un gráfico)
+		{{else}}
+			<p>Debes estar registrado para ver tu perfil</p>
+		{{/if}}
 	{{/if}}
 </template>
 
