mejora visual del boton chat

--- a/client/templates/chat-t.html
+++ b/client/templates/chat-t.html
@@ -13,7 +13,7 @@
     	</div>
 	</div>
 
-    <input type="button" id="showchat" value="chat">
+    <input type="button" id="showchat" class="btn btn-primary" value="Chat"></input>
 </template>
 
 <template name="messages">
