--- a/chat.css
+++ b/chat.css
@@ -45,6 +45,14 @@
 	border-bottom: solid 1px blue;
 }
 
+.btn-primary {
+    -webkit-box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow:    0px 3px 0px rgba(0, 0, 0, 0.3);
+    box-shadow:         0px 3px 0px rgba(0, 0, 0, 0.3);
+}
 
-
+.btn-primary:active {
+    margin-top: 3px;
+    margin-bottom: -3px;
+}
 
