--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -1,5 +1,6 @@
-<template name="juegos"> {{#if show}}
+<template name="juegos">
 
+ {{#if show}}
 		<div class="full-page">
 		
 			<h5 id = "hidden">Juegos disponibles en la plataforma</h5>
