Inicio de partida automático para el creador de partida, arreglo en la detección de usuarios que ya habían iniciado partida, implementación del contador de usuarios dentro de cada partida, y muestra del título de partida.

--- a/prototipo-4/style/client.css
+++ b/prototipo-4/style/client.css
@@ -73,9 +73,15 @@ html{
 }
 
 
+.linkmatch{
+	cursor:pointer;
+	text-decoration:underline;"
+}
 
-
-
+#matches table tr td{
+	text-align: center;
+	width: 250px;
+}
 
 #accordion{	
 	position: absolute;
