Devolver el rango del usuario en la informacion de  la partida

--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -44,36 +44,12 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
               {{#each jugadores}}
                 <tr>
                     <td>{{getUsername this}}</td>
-                    <td>{{getUserRango this}}</td>
+                    <td>{{userRango this}}</td>
                     <td>Editor</td>
-                    <td><span class="label label-success">Active</span>
+                    <td><span class="label label-warning">Pendiente</span>
                     </td>                                       
                 </tr>
-                {{/each}}
-                <tr>
-                    <td>Emily F. Burns</td>
-                    <td>2011/12/01</td>
-                    <td>Staff</td>
-                    <td><span class="label label-important">Banned</span></td>                                       
-                </tr>
-                <tr>
-                    <td>Andrew A. Stout</td>
-                    <td>2010/08/21</td>
-                    <td>User</td>
-                    <td><span class="label">Inactive</span></td>                                        
-                </tr>
-                <tr>
-                    <td>Mary M. Bryan</td>
-                    <td>2009/04/11</td>
-                    <td>Editor</td>
-                    <td><span class="label label-warning">Pending</span></td>                                       
-                </tr>
-                <tr>
-                    <td>Mary A. Lewis</td>
-                    <td>2007/02/01</td>
-                    <td>Staff</td>
-                    <td><span class="label label-success">Active</span></td>                                        
-                </tr>                                   
+                {{/each}}           
               </tbody>
             </table>
             	<div class="btn-toolbar">
