perfil medio hecho

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -3,24 +3,44 @@
 		{{#if registrado}}
 			<div id="formu">
 				<h1>Perfil de Usuario</h1>
-				<div class="container">            
-					Nombre: <input class="form-control" name="firstname" value="{{getUsername getUserId}}" type="text"/>
-           			Email: <input class="form-control" name="youremail" value="{{getUserEmail getUserId}}" type="email" />
+				<div class="container">   
+					<label>
+					Nombre: <input class="form-control" id="nombre" value="{{getUsername getUserId}}" type="text" required/>
+					 </label>
+					 <label>
+           			Email: <input class="form-control" name="youremail" value="{{getUserEmail getUserId}}" type="email" required/>
+           			</label>
             		<!--<input class="form-control" name="password" placeholder="New Password" type="password" />-->
             		Fecha de nacimiento: <input type="text" id="datebirthday" value="{{datebirthday}}">
-					<label class="radio-inline"> Género: 
-						<input type="radio" name="sex" id="inlineCheckbox1" value="male" /> Male
-						<input type="radio" name="sex" id="inlineCheckbox2" value="female" /> Female
+            		<label>
+            		Género:
+					<select id="genero" name="list"> 
+						<option value="Male"> Male 
+						<option value="Female"> Female 
+					</select> 
 					</label>
 					<br/>
 					<br/>
-					<button class="btn btn-primary" type="submit"> Guardar los cambios</button>
+					<button class="btn btn-primary" id="save" type="submit"> Guardar los cambios</button>
 				</div>
 			</div>
-			insignias
-			rango
-			posicion en el ranking general
-			puntos conseguidos
+			<h1>Premios</h1>
+
+			puntos conseguidos: 
+			{{#each scores}} 
+			<table>
+				<tbody>
+					<tr>
+						<td>{{game}}</td>
+						<td>{{user}}</td>
+						<td>{{maxScore}}</td> 
+						<td>{{totalScore}}</td> 
+						<td>{{rango}}</td> 
+					</tr>
+				</tbody>
+			</table>  
+		</div>
+		{{/each}}
 			partidas jugadas
 			partidas ganadas
 			(si se pudiese mejor con un gráfico)
