--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -24,6 +24,12 @@
 							<img src={{pic}} class="post-image" alt="sample image" width="606" height="115" />
 							<div class="post-description">
 								<p>{{description}}</p>
+            					<input type="button" class="btn_edit" value="Editar torneo"><br>
+
+								{{#if showEditTorn}}
+					              {{> editTor}}
+					            {{/if}}
+
 								<input type="button" id="{{_id}}" class = "participantes" value="{{participantes _id}}">
 								{{#if currentUser}}
 									<input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}}">
@@ -59,32 +65,59 @@
 		<div class="modal">
 			<div class="modal-header">
 				<button type="button" class="close cancel">&times;</button>
-				<h3>Add Championship</h3>
+				<h3>Añadir torneo</h3>
 			</div>        
 			<div class="modal-body">
 				{{#if error}}
 					<div class="alert alert-error">{{error}}</div>
 				{{/if}}
-				<p>Title <input type="text" id="title" class="title span5"></p>
+				<p>Título: <input type="text" id="title" class="title span5"></p>
 				<p>Juego: 
 					<select id="game" name="Juego">
-						<option selected value="elige"> Elige una opción</option>
+						<option selected value="elige"> Elige una opción: </option>
 						{{#each juegos}}
 							<option value="{{name}}">{{name}}</option>  
 						{{/each}}
 					</select>
 				</p>
-				<p>Date Start: <input type="text" id="date_start"></p>
-				<p>Date Finish: <input type="text" id="date_finish"></p>
-				<p>Description: <textarea id="description" class="description span5"></textarea> </p>
-				<p>URL Imagen: <input type="text" id="pic"</p>
+				<p>Fecha comienzo: <input type="text" id="date_start">{{date_start}}</p>
+				<p>Fecha fin: <input type="text" id="date_finish">{{date_finish}}</p>
+				<p>Descripción: <textarea id="description" class="description span5">{{description}}</textarea></p>
+				<p>URL de la imagen: <input type="text" id="pic"></p>
 			</div>
 			<div class="modal-footer">
-				<a href="#" class="btn cancel">Cancel</a>
-				<a href="#" class="btn btn-primary save">Add Championship</a>
+				<a href="#" class="btn cancel">Cancelar</a>
+				<a href="#" class="btn btn-primary save">Añadir torneo</a>
 			</div>
 		</div>
 	</div>
+</template>
+
+<template name="editTor">
+  {{#with torneo}}
+    <div class="mask"> </div>
+        <div class="modal">
+        
+          <div class="modal-header">
+            <button type="button" class="close cancel">&times;</button>
+            <h3>Editar el torneo</h3>
+          </div>   
+               
+          <div class="modal-body">
+			<p>Título: <input type="text" id="title" class="title span5" value = {{title}}></p>
+			<p>Fecha comienzo: <input type="text" id="date_start" value = {{date_start}}></p>
+			<p>Fecha fin: <input type="text" id="date_finish" value = {{date_finish}}></p>
+			<p>Descripción: <textarea id="description" class="description span5">{{description}}</textarea></p>
+			<p>URL de la imagen: <input type="text" id="pic" value = {{pic}}></p>
+          </div>
+          
+          <div class="modal-footer">
+            <a href="#" class="btn cancel">Cancelar</a>
+            <a href="#" class="btn btn-primary save">Salvar</a>
+          </div>
+        </div>
+    </div>
+  {{/with}}
 </template>
 
 
