--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -80,9 +80,9 @@
 						{{/each}}
 					</select>
 				</p>
-				<p>Fecha comienzo: <input type="text" id="date_start">{{date_start}}</p>
-				<p>Fecha fin: <input type="text" id="date_finish">{{date_finish}}</p>
-				<p>Descripción: <textarea id="description" class="description span5">{{description}}</textarea></p>
+				<p>Fecha comienzo: <input type="text" id="date_start"></p>
+				<p>Fecha fin: <input type="text" id="date_finish"></p>
+				<p>Descripción: <textarea id="description" class="description span5"></textarea></p>
 				<p>URL de la imagen: <input type="text" id="pic"></p>
 			</div>
 			<div class="modal-footer">
@@ -113,7 +113,7 @@
           
           <div class="modal-footer">
             <a href="#" class="btn cancel">Cancelar</a>
-            <a href="#" class="btn btn-primary save">Salvar</a>
+            <a href="#" class="btn btn-primary save_edit">Salvar</a>
           </div>
         </div>
     </div>
