--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -3,67 +3,64 @@
 http://bootsnipp.com/snippets/featured/condensed-table-example -->
 
 <template name="hall_clarcassone">
-{{#if show}}
-		<div class="full-page">
-		
-			<h5 id = "hidden">Juegos disponibles en la plataforma</h5>
-					
-			<h2>¡Creacion de partidas para el juego Clarcassone!</h2>
-			<div class="gallery">
-<div class="container">
-	<div class="span3">
-            <div class="well">
-        		<h2 class="muted">Jugadores</h2>
-        		<ul>
-        			{{#each UsersInHall}}
-        				<li><span class="label">{{getUsername user_id}}</span></li>
-        			{{/each}}
-        		</ul>          
-        		<p>Descripcion de como se juega aqui.</p>
-        		<hr>	
-        		<p><a id="nuevaPartida" class="btn btn-large" href="#"><i class="icon-ok"></i> Crear Nueva Partida</a></p>
-        		<hr>
-        	</div>
+  {{#if show}}
+		<div class="full-page">		
+		<h5 id = "hidden">Juegos disponibles en la plataforma</h5>			
+		<h2>¡Creacion de partidas para el juego Clarcassone!</h2>
+		<div class="gallery">
+    <div class="container">
+      <div class="span3">
+        <div class="well">
+        	<h2 class="muted">Jugadores</h2>
+      		<ul>
+      			{{#each UsersInHall}}
+      				<li><span class="label">{{getUsername user_id}}</span></li>
+      			{{/each}}
+      		</ul>          
+        	<p>Descripcion de como se juega aqui.</p>
+        	<hr>	
+            <p><a id="nuevaPartida" class="btn btn-large" href="#"><i class="icon-ok"></i> Crear Nueva Partida</a></p>
+        	<hr>
+          {{#if error}}
+            <div class="alert alert-error">{{error}}</div>
+          {{/if}}
         </div>
-
-
-
-	<div class="row">
-		<div class="span5">
-		{{#each partidasVolatiles}}
-            <table class="table table-striped table-condensed">
-                  <thead>
-                  <tr>
-                      <th>Username</th>
-                      <th>Rango</th>
-                      <th>Role</th>
-                      <th>Status</th>                                          
-                  </tr>
-              </thead>   
-              <tbody>
+      </div>
+    
+    <div class="row">
+		  <div class="span5">
+		    {{#each partidasVolatiles}}
+          <table class="table table-striped table-condensed">
+            <thead>
+              <tr>
+                <th>Username</th>
+                <th>Rango</th>
+                <th>Role</th>
+                <th>Status</th>                                          
+              </tr>
+            </thead>   
+            <tbody>
               {{#each jugadores}}
                 <tr>
-                    <td>{{getUsername this}}</td>
-                    <td>{{userRango this}}</td>
-                    <td>Editor</td>
-                    <td><span class="label label-warning">Pendiente</span>
-                    </td>                                       
+                  <td>{{getUsername this}}</td>
+                  <td>{{userRango this}}</td>
+                  <td>Editor</td>
+                  <td><span class="label label-warning">Pendiente</span>
+                  </td>                                       
                 </tr>
-                {{/each}}           
-              </tbody>
-            </table>
-            	<div class="btn-toolbar">
-
-		    <button class="btn startparty">Empezar</button>
-		    <button class="btn removeparty">Descartar</button>
-		    <button class="btn unirme">Unirme</button>
-		    <button class="btn ready">Listo!</button>
-	</div>
-            {{/each}}
-            </div>
-            
-</div>
-</div>
+              {{/each}}           
+            </tbody>
+          </table>
+          <div class="btn-toolbar">
+    		    <button class="btn startparty">Empezar</button>
+    		    <button class="btn removeparty">Descartar</button>
+    		    <button class="btn unirme">Unirme</button>
+    		    <button class="btn ready">Listo!</button>
+	        </div>
+        {{/each}}
+      </div>            
+    </div>
+  </div>
 </div>
 {{/if}}
 </template>
