--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -45,7 +45,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
                   <td>{{getUsername this.user_id}}</td>
                   <td>{{userRango this.user_id}}</td>
                   <td>Editor</td>
-                  <td><span class="label label-warning">{{this.estado}}</span>
+                  <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span>
                   </td>                                       
                 </tr>
               {{/each}}           
