--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -55,7 +55,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
     		    <button class="btn startparty">Empezar</button>
     		    <button class="btn removeparty">Descartar</button>
     		    <button class="btn unirme">Unirme</button>
-    		    <button class="btn ready">Listo!</button>
+    		    <button class="btn ready">{{estadoUserAct this._id}}</button>
 	        </div>
         {{/each}}
       </div>            
