Ya se puede abandonar una partida con la consecuente aparición en el hall de jugadores, borrado de éste jugador de la bd de partidasvolatiles a la que se apuntó; añadidos mensaje de error si se quiere abandonar una partida que se ha creado (deberá descartarla en ese caso)

--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -54,7 +54,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
           <div class="btn-toolbar">
     		    <button class="btn startparty">Empezar</button>
     		    <button class="btn removeparty">Descartar</button>
-    		    <button class="btn unirme">Unirme</button>
+    		    <button class="btn unirme">{{unir_aband this._id}}</button>
     		    <button class="btn ready">{{estadoUserAct this._id}}</button>
 	        </div>
         {{/each}}
