En la columna creador ya aparece quién es el creador y quiénes los participantes

--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -44,7 +44,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
                 <tr>
                   <td>{{getUsername this.user_id}}</td>
                   <td>{{userRango this.user_id}}</td>
-                  <td>Editor</td>
+                  <td>{{rol this.user_id}}</td>
                   <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span>
                   </td>                                       
                 </tr>
