mejora de la plataforma

--- a/client/templates/hall-clarcassone-t.html
+++ b/client/templates/hall-clarcassone-t.html
@@ -24,6 +24,9 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
           {{#if error}}
             <div class="alert alert-error">{{error}}</div>
           {{/if}}
+          <div class="alert alert-error not-register" style="display:none">
+            <p>Para jugar debes registrate en la plataforma</p>
+          </div>
         </div>
       </div>
     
