solo se puede cambiar los juegos siendo admin, creo q lo de google ya esta arreglado probarlo cuando deploy

--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -13,22 +13,22 @@
 				<div class="gallery-item">
 					<h3>{{name}}</h3>
 					<img src="{{logo_src}}" class="gallery-image" alt="{{logo_alt}}" />
+          {{#if editar}}
 					<input type="button" class="btn cancel" value="Editar el info del juego">
-					
+					{{/if}}
 					<div class="gallery-description">
 						<h5>{{title_desc}}</h5>
 						<p>{{description}}</p>
 					</div>
 					
 					
-					{{#if showEditGame}}
-						{{> editGame}}
-					{{/if}}
-				</div>
-				{{/each}}
-			</div>
-		</div>
-
+            {{#if showEditGame}}
+              {{> editGame}}
+                {{/if}}
+                </div>
+                  {{/each}}
+                </div>
+		      </div>
 
 {{/if}} </template>
 
