se guardan los cambios excepto el de cambio de email

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -15,9 +15,10 @@
             		<label>
             		Género:
 					<select id="genero" name="list"> 
-						<option value="Male"> Male 
-						<option value="Female"> Female 
-					</select> 
+						<option selected value="Elige">{{genero}}</option>
+						<option value="Male"> Male </option>
+						<option value="Female"> Female </option>
+					</select>
 					</label>
 					<br/>
 					<br/>
