arreglado edit info torneos

--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -9,7 +9,7 @@
 						<h3>{{name}}</h3>
 						<img src="{{logo_src}}" class="gallery-image" alt="{{logo_alt}}" />
 						{{#if editar}}
-							<input type="button" class="btn cancel" value="Editar el info del juego">
+							<input type="button" class="edit_game" class="btn cancel" value="Editar el info del juego">
 						{{/if}}
 						<div class="gallery-description">
 							<h5>{{title_desc}}</h5>
