Comprobar al empezar una partida si el número de usuarios es de 4 a 6; que se muestre el canvas de clarcassone con sus variables de sesión (aún no está terminado y falta hacer la llamada a iu con los parámetros acordados)

--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -29,7 +29,12 @@
   <div id="gamecontainer"> 
 	  {{>idnAlien}}
 	  {{>idnFroot}}
+	  {{>idnClarca}}
   </div>
+</template>
+
+<template name="idnClarca"> 
+  <canvas id='klarki' width='320' height='480'></canvas>
 </template>
 
 <template name="idnAlien"> 
