id canvas clarcassone, size

--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -34,7 +34,7 @@
 </template>
 
 <template name="idnClarca"> 
-  <canvas id='clarca' width='320' height='480' ></canvas>
+  <canvas id='CanvasclarcaGame' width='800' height='600' ></canvas>
 </template>
 
 <template name="idnAlien"> 
