commit para nada

--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -105,6 +105,10 @@ html{
 }
 
 
+#clarcassonnecanvas{
+	background-color:blue;
+}
+
 .coin-slider { overflow: hidden; zoom: 1; position: relative; }
 .coin-slider a{ text-decoration: none; outline: none; border: none; }
 
