Ahora se pueden meter 3 jugadores min al carca o mas

--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -103,9 +103,13 @@ html{
 	height: 420px;
 	
 }
+#clarcassonnecontainer{
 
+	
+}
 
 #clarcassonnecanvas{
+	float: right;
 	background-color:blue;
 }
 
