--- a/PL-BlutBad/client/templates/torneos-t.html
+++ b/PL-BlutBad/client/templates/torneos-t.html
@@ -20,18 +20,26 @@
 							<span class="date">hasta {{date_finish}}</span> 
 							(creado por {{user_create}})
 						</div>
+						
 						<img src={{pic}} class="post-image" alt="sample image" width="606" height="115" />
+						
 						<div class="post-description">
 							<p>{{description}}</p>
+							
+							 <input type="button"  class="empezarTorneo" value="Empezar Torneo">
+                             <input type="button"  class="finalizarTorneo" value="Finalizar Torneo">
+                             
 							<input type="button" id="{{_id}}" class = "participantes" value="{{participantes _id}}">
+							
 							{{#if editar}}
 								<input type="button" id="{{_id}}" class="editar" value="Editar el info del torneo">
 							{{/if}}
+							
 							{{#if currentUser}}
 								<input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}}">
 								<div id = "{{_id}}" class = "{{muestra_part _id}}">
 									{{#each lista_participantes _id}}
-										<div id = "part_list">{{getUsername id_user}}</div>
+										<div id="part_list">{{getUsername id_user}}</div>
 									{{/each}}
 								</div>
 							{{else}}
@@ -43,6 +51,7 @@
 				{{/each}}
 			</div>
 		</div>   
+		
 		<div class="one-third">
 			<h3>Juegos</h3> 
 			<ul class="sub-navigation">
