--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -16,7 +16,7 @@
 
 
 	<div class="btn-toolbar">
-	    <button class="btn btn-primary">Boton Funcional 1</button>
+	    <button class="btn btn-primary fakeRanking">Fake Ranking</button>
 	    <button class="btn">Boton Funcional 3</button>
 	    <button class="btn">Boton Funcional 2</button>
 	</div>
