--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -67,14 +67,14 @@
 
 		<canvas id="gameFrootcanvas" width="640" height="480" class="gameFrootlayer"> </canvas>
 		  <div id="scorescreen" class="gameFrootlayer">
-			<img id="togglemusic" src="images/icons/sound.png" onclick="gameFroot.toggleBackgroundMusic();">
-			<img src="images/icons/prev.png" onclick="gameFroot.restartLevel();">
+			<img id="togglemusic" src="/images/icons/sound.png" onclick="gameFroot.toggleBackgroundMusic();">
+			<img src="/images/icons/prev.png" onclick="gameFroot.restartLevel();">
 			<span id="score">Score: 0</span>
 		  </div>
 		  
 		  <div id="gameFrootstartscreen" class="gameFrootlayer">
-			<img src="images/icons/play.png" alt="Play gameFroot" onclick = "gameFroot.showLevelScreen();"><br>
-			<img src="images/icons/settings.png" alt="Settings">
+			<img src="/images/icons/play.png" alt="Play gameFroot" onclick = "gameFroot.showLevelScreen();"><br>
+			<img src="/images/icons/settings.png" alt="Settings">
 		  </div>
 		  
 		  <div id="levelselectscreen" class="gameFrootlayer">
@@ -87,10 +87,10 @@
 		  <div id="endingscreen" class="gameFrootlayer">
 			<div>
 			  <p id="endingmessage">The Level Is Over Message</p>
-			  <p id="playcurrentlevel" onclick="gameFroot.restartLevel();"><img src="images/icons/prev.png"> Replay Current Level</p>
-			  <p id="playnextlevel" onclick="gameFroot.startNextLevel();"><img src="images/icons/next.png"> Play Next Level </p> 
+			  <p id="playcurrentlevel" onclick="gameFroot.restartLevel();"><img src="/images/icons/prev.png"> Replay Current Level</p>
+			  <p id="playnextlevel" onclick="gameFroot.startNextLevel();"><img src="/images/icons/next.png"> Play Next Level </p> 
 			  
-			  <p id="returntolevelscreen"onclick="gameFroot.showLevelScreen();"><img src="images/icons/return.png"> Return to Level Screen</p>
+			  <p id="returntolevelscreen"onclick="gameFroot.showLevelScreen();"><img src="/images/icons/return.png"> Return to Level Screen</p>
 			</div>
 	</div> 
 	 
